fixed some alignment issues

--- a/src/components/ScoreSheet.css
+++ b/src/components/ScoreSheet.css
@@ -54,3 +54,11 @@ section {
   width: 1000px;
   height: 58px;
 }
+
+#treble-clef3 {
+  margin-top: .5px;
+}
+
+#treble-clef4 {
+  margin-top: .5px;
+}
